[tool.poetry]
name = "lastfm-twitter"
version = "0.1.0"
description = ""
authors = ["Fluffy-Bean <michal-gdula@protonmail.com>"]
readme = "README.md"
packages = [{include = "lastfm_twitter"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
twitter-api-client = "^0.9.4"
black = "^23.3.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

